--- a/1.00-starting-project/pom.xml
+++ b/1.00-starting-project/pom.xml
@@ -31,6 +31,10 @@
 
                 <configuration>
                     <testFailureIgnore>true</testFailureIgnore>
+
+                    <statelessTestsetReporter implementation="org.apache.maven.plugin.surefire.extensions.junit5.JUnit5Xml30StatelessReporter">
+                        <usePhrasedTestCaseMethodName>true</usePhrasedTestCaseMethodName>
+                    </statelessTestsetReporter>
                 </configuration>
             </plugin>
 
