--- a/3.00-starting-project/src/main/resources/application.properties
+++ b/3.00-starting-project/src/main/resources/application.properties
@@ -16,3 +16,16 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql = true
+
+# SQL Scripts
+
+sql.scripts.create.student=insert into student(id, firtname, lastname, email_address)\
+   values (1, 'Eric', 'Roby', 'eric.roby@lc3n7.tech')
+sql.scripts.create.math=insert into math_grade(id, student_id, grade) values(1, 1, 100.0)
+sql.script.create.science=insert into science_grade(id, student_id, grade) values(1, 1, 100.0)
+sql.script.create.history=insert into history_grade(id, student_id, grade) values(1, 1, 100.0)
+
+sql.script.delete.student=DELETE FROM student
+sql.script.delete.math=DELETE FROM math_grade
+sql.script.delete.science=DELETE FROM science_grade
+sql.script.delete.history=DELETE FROM history_grade
