Used SQL from application properties

--- a/3.00-starting-project/src/main/resources/application.properties
+++ b/3.00-starting-project/src/main/resources/application.properties
@@ -19,13 +19,13 @@ spring.jpa.show-sql = true
 
 # SQL Scripts
 
-sql.scripts.create.student=insert into student(id, firtname, lastname, email_address)\
-   values (1, 'Eric', 'Roby', 'eric.roby@lc3n7.tech')
-sql.scripts.create.math=insert into math_grade(id, student_id, grade) values(1, 1, 100.0)
-sql.script.create.science=insert into science_grade(id, student_id, grade) values(1, 1, 100.0)
-sql.script.create.history=insert into history_grade(id, student_id, grade) values(1, 1, 100.0)
+sql.script.create.student=insert into student(id, firstname, lastname, email_address)\
+   values (1, 'Eric', 'Roby', 'eric.roby@c3n7.tech')
+sql.script.create.math.grade=insert into math_grade(id, student_id, grade) values(1, 1, 100.0)
+sql.script.create.science.grade=insert into science_grade(id, student_id, grade) values(1, 1, 100.0)
+sql.script.create.history.grade=insert into history_grade(id, student_id, grade) values(1, 1, 100.0)
 
 sql.script.delete.student=DELETE FROM student
-sql.script.delete.math=DELETE FROM math_grade
-sql.script.delete.science=DELETE FROM science_grade
-sql.script.delete.history=DELETE FROM history_grade
+sql.script.delete.math.grade=DELETE FROM math_grade
+sql.script.delete.science.grade=DELETE FROM science_grade
+sql.script.delete.history.grade=DELETE FROM history_grade
