--- a/3.00-starting-project/pom.xml
+++ b/3.00-starting-project/pom.xml
@@ -45,6 +45,12 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>org.mariadb.jdbc</groupId>
+			<artifactId>mariadb-java-client</artifactId>
+			<scope>runtime</scope>
+		</dependency>
 		
 		<!-- spring data jpa -->
 		<dependency>
