--- a/4.00-starting-project/pom.xml
+++ b/4.00-starting-project/pom.xml
@@ -38,6 +38,12 @@
             <scope>runtime</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.mariadb.jdbc</groupId>
+            <artifactId>mariadb-java-client</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+
         <!-- spring data jpa -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
